docs: Update README.md for rx-mysql version 2.0.0
- Revise documentation to reflect changes in the `init` function, now async and returning an object with `getInstance`, `connect`, and `disconnect`.
- Provide a migration guide detailing breaking changes and upgrade instructions from version 1.x to 2.x.
- Review and update installation, usage, and configuration sections to ensure clarity and accuracy.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,14 @@
     }
   },
 
+  "terminal.integrated.profiles.windows": {
+    "Git Bash": {
+      "path": "C:\\Program Files\\Git\\bin\\bash.exe",
+      "args": ["--login", "-i"]
+    }
+  },
+  "terminal.integrated.defaultProfile.windows": "Git Bash",
+
   "search.useIgnoreFiles": false,
 
   "files.watcherExclude": {
