feat: add test mode functionality with utility methods for query inspection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,11 +28,11 @@
 
   "terminal.integrated.profiles.windows": {
     "Git Bash": {
-      "path": "C:\\Program Files\\Git\\bin\\bash.exe",
-      "args": ["--login", "-i"]
+      "path": "C:\\Program Files\\Git\\bin\\bash.exe"
     }
   },
   "terminal.integrated.defaultProfile.windows": "Git Bash",
+  "terminal.integrated.defaultProfile.linux": "bash",
 
   "search.useIgnoreFiles": false,
 
