--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Arik W",
   "license": "MIT",
   "scripts": {
-    "test": "mocha tests/"
+    "test": "mocha tests/unit"
   },
   "devDependencies": {
     "chai": "^4.4.1",
